Поправил тесты, пофиксил баги